Backport changes to branch-0.4 to prepare for release 0.4.1 (#1398)
**PR Checklist**

- [x] A description of the changes is added to the description of this
PR.
- [ ] If there is a related issue, make sure it is linked to this PR.
- [ ] If you've fixed a bug or added code that should be tested, add
tests!
- [ ] If you've added or modified a feature, documentation in `docs` is
updated

**Description of changes**
Backport changes to branch-0.4 to prepare for release 0.4.1.
Will be merged as **"Create a merge commit"** to preserve the history.

---------

Signed-off-by: Cheng Ji <fallenchengji@gmail.com>
Signed-off-by: Zhen Li <zhen.li@databricks.com>
Signed-off-by: Robert Pack <robstar.pack@gmail.com>
Signed-off-by: Timothy Wang <timothy.art@gmail.com>
Signed-off-by: Zheng Hu <openinx@gmail.com>
Signed-off-by: Yi Li <yi.li@databricks.com>
Signed-off-by: Lukas Reining <lukas.reining@codecentric.de>
Co-authored-by: ChengJi <fallenchengji@gmail.com>
Co-authored-by: Zhen Li <zhenlineo@users.noreply.github.com>
Co-authored-by: Robert Pack <42610831+roeap@users.noreply.github.com>
Co-authored-by: Timothy Wang <timothy.art@gmail.com>
Co-authored-by: openinx <openinx@gmail.com>
Co-authored-by: Lukas Reining <lukas.reining@codecentric.de>
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>